src/main/java/org/example/nanobananaprobot/errors/UserAlreadyExistsException.java
package org.example.nanobananaprobot.errors;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException(String message) {
        super(message);
    }
}